Reorganize test suites; add kernel & residue tests
Introduce explicit projection/audit residue suites and promote runtime-first scheduling lanes. Added EngineProjectionResidueSuite, EngineProjectionAuditSuite and ServerProjectionResidueSuite; moved projection-heavy tests out of main scheduling suites (ServerSchedulingE2eSuite / EngineSchedulingCoreSuite) and updated EngineSchedulingCoreSuite to include kernel/runtime-focused tests (TaskKernelLifecycleTest, TaskContractTerminalBehaviorTest, TaskRuntimeRecoveryPortTest, WorkerManagerTest).

Updated many server E2E tests to assert runtime-first interfaces (RuntimeTaskSnapshot, stats()/activeLeases()) instead of relying on compatibility projection message fields. Made SimpleTaskDispatchBinderTest public and adjusted docs/READMEs/VERIFIED_RUNBOOK to reflect the new testing guidance and mvn invocations for explicit residue/audit lanes.